Some graphs and things

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <title>Text analysis of Congressional Hearings published by US GPO</title>
-        <link rel = "stylesheet" type = "text/css" href = "main.css">
     </head>
     <body>
         <h1>Establishing framework of large-scale text analysis using US GPO Congress Hearings files</h1>
