--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="/main.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
+
         <title>Text analysis of Congressional Hearings published by US GPO</title>
     </head>
     <body>
@@ -33,8 +34,8 @@
         <img src = "./publish/fourth.png">
         <img src = "./publish/fourth1.png">
         <p> And finally some laughter.</p>
-        <img src = "./publish/fourth.png">
-        <img src = "./publish/fourth1.png">
+        <img src = "./publish/sixth.png">
+        <img src = "./publish/sixth1.png">
 
         
     </body>
