--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <p> And finally some laughter.</p>
         <img src = "./publish/sixth.png">
         <img src = "./publish/sixth1.png">
+<h1>Some of ggrepel is working</h1>
+
+        <p> Only the general stuff though - there is probably something wrong with unused levels (causes infinite recursion).</p>
+        <img src = "./publish/cleaner_first.png">
+        <img src = "./publish/cleaner_second.png">
 
         
     </body>
